syntax = "proto3";

package posts.v1;

import "google/api/annotations.proto";

// Post service for managing blog posts
service PostService {
  // Get a post by ID
  rpc GetPost(GetPostRequest) returns (GetPostResponse) {
    option (google.api.http) = {
      get: "/v1/posts/{post_id}"
    };
  };

  // Create a new post
  rpc CreatePost(CreatePostRequest) returns (CreatePostResponse) {
    option (google.api.http) = {
      post: "/v1/posts"
      body: "*"
    };
  };

  // Get all posts by a user
  rpc GetUserPosts(GetUserPostsRequest) returns (GetUserPostsResponse) {
    option (google.api.http) = {
      get: "/v1/users/{user_id}/posts"
    };
  };

  // Get a specific comment on a post
  rpc GetPostComment(GetPostCommentRequest) returns (GetPostCommentResponse) {
    option (google.api.http) = {
      get: "/v1/posts/{post_id}/comments/{comment_id}"
    };
  };
}

message GetPostRequest {
  string post_id = 1;
}

message GetPostResponse {
  Post post = 1;
}

message CreatePostRequest {
  string title = 1;
  string content = 2;
  string author_id = 3;
}

message CreatePostResponse {
  Post post = 1;
}

message GetUserPostsRequest {
  string user_id = 1;
}

message GetUserPostsResponse {
  repeated Post posts = 1;
}

message GetPostCommentRequest {
  string post_id = 1;
  string comment_id = 2;
}

message GetPostCommentResponse {
  Comment comment = 1;
}

message Post {
  string id = 1;
  string title = 2;
  string content = 3;
  string author_id = 4;
}

message Comment {
  string id = 1;
  string post_id = 2;
  string content = 3;
  string author_id = 4;
}
